# vconsole-setup

./: .dir-locals.el  .editorconfig  .gitignore  Makefile.am  README.rst  configure.ac  meson.build
include/: env_parser.hh  meson.build  setup_console.hh
src/: env_parser.cc  main.cc  setup_console.cc
