# This file is a part of vconsole-setup.
# Copyright (C) Rahul Sandhu <rahul@sandhuservices.dev>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: LGPL-2.1-or-later

AC_INIT([vconsole-setup], [1.0])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])

AC_PROG_CXX

AX_CXX_COMPILE_STDCXX(20, [noext], [mandatory])

AM_INIT_AUTOMAKE([foreign -Wall])

AC_CONFIG_FILES([
    Makefile
])

AC_OUTPUT
